SubscriberDTO added && register - login feature added && SubscriberService created
