# storage/api-docs/api-docs.json
@@ -68,6 +68,53 @@
                     }
                 }
             }
+        },
+        "/api/v1/subscriber": {
+            "post": {
+                "tags": [
+                    "Subscriber"
+                ],
+                "summary": "Login as subscriber",
+                "operationId": "03b13fdecc19e9f22e6fc55ba177f156",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "description": "Subscriber Email",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "Password",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Login Successfully"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
+            }
         }
     },
     "tags": [
